--- a/nike/index.html
+++ b/nike/index.html
@@ -5,7 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/assets/logo/nikeLogoRounded.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nike. Just do it. Nike IN</title>
-    <link href="https://fonts.googleapis.com/css2?family=Anton&display=Bebas+Neue&display=swap" rel="stylesheet">
+<link rel="preload" as="image" href="/assets/home/desktopImg.jpg" />
+<link rel="manifest" href="/manifest.webmanifest" />
 
   </head>
   <body>
